--- a/2019_neurips_vigil/vigil_2019_main.tex
+++ b/2019_neurips_vigil/vigil_2019_main.tex
@@ -28,8 +28,11 @@
 \usepackage{mathtools}
 %\usepackage[usenames, dvipsnames]{color}
 
-\usepackage{enumitem}
-\setlist[enumerate]{labelindent=5pt, label=\alph*)} 
+\usepackage{cleveref}
+\crefname{figure}{Figure}{Figures}
+
+%\usepackage{enumitem}
+%\setlist[enumerate]{labelindent=5pt, label=\alph*)} 
 
 
 % \usepackage{blindtext}
