--- a/2019_neurips_vigil/vigil_2019_main.tex
+++ b/2019_neurips_vigil/vigil_2019_main.tex
@@ -80,19 +80,19 @@
 \newcommand{\vone}{\vect{1}}
 \newcommand{\proj}{\mathrm{proj}}
 
-\newcommand{\imatch}{g^{\mathrm{vis}}}
-\newcommand{\mmatch}{g^{\mathrm{mem}}}
+\newcommand{\imatch}{g^{\mathrm{v}}}
+\newcommand{\mmatch}{g^{\mathrm{m}}}
 
-\newcommand{\doadd}{h^{\mathrm{add}}}
-\newcommand{\doreplace}{h^{\mathrm{repl}}}
+\newcommand{\doadd}{h^{\mathrm{a}}}
+\newcommand{\doreplace}{h^{\mathrm{r}}}
 
 \newcommand{\tlast}{\tau^{\mathrm{last}}}
 \newcommand{\tlatest}{\tau^{\mathrm{latest}}}
 \newcommand{\tnow}{\tau^{\mathrm{now}}}
 \newcommand{\tnone}{\tau^{\mathrm{none}}}
 
-\newcommand{\rhead}{w^{\mathrm{read}}}
-\newcommand{\whead}{w^{\mathrm{write}}}
+\newcommand{\rhead}{rh}
+\newcommand{\whead}{wh}
 
 
 \title{Visually Grounded Reasoning about Temporal Concepts in Selective Attention Memory}
