--- a/2019_neurips_vigil/experiments.tex
+++ b/2019_neurips_vigil/experiments.tex
@@ -34,14 +34,14 @@ We argue that the generalization capability of SAMNet is mainly due to the dynam
 			Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard  \\ 
 			\midrule
 			
-			Overall accuracy & 98.0 & 91.6 & 96.5  &  &           & 97.6  & 65.9 & & 80.1 \\ 
+			Overall accuracy & 98.0 & 91.6 & 96.5  &  &           & 97.6  & 65.9 & 78.1& 80.1 \\ 
 			
 			\midrule 
 			
 			
-			AndCompareColor	&	93.5		&	82.7	&	89.2	&&		&81.9	&57.1&  &	51.4
+			AndCompareColor	&	93.5		&	82.7	&	89.2	& &		&81.9	&57.1&60.7  &	51.4
 			\\ 
-			AndCompareShape	&	93.2 		&	83.7	&	89.7	&&	&	80.0	&53.1	& &50.7\\ 
+			AndCompareShape	&	93.2 		&	83.7	&	89.7	&&	&	80.0	&53.1	&50.3 &50.7\\ 
 			
 			
 			
