--- a/2019_neurips_vigil/appendix_model.tex
+++ b/2019_neurips_vigil/appendix_model.tex
@@ -367,11 +367,80 @@ The image encoder, question encoder and output unit are described in the appendi
 
 \colorbx{Image Encoder}
 
+\begin{description}
+	\item[Inputs:] 
+	Images
+	
+	\item[Output:] 
+	Features maps:
+	$F_k$
+\end{description}
+
+
+
+
+
+
+The Image Encoder unit is responsible to preprocess the sequence of images one at the time. It is a 4 layer convolutional neural network. Every layer is composed of the following sequence of operations:
+
+\begin{enumerate}
+	\item 2D convolution ($stride=1$) 
+	\item 2D max pooling
+	\item 2D batch normalization
+	\item Relu (only for the first 3 layers)
+\end{enumerate}
+
+The first layer has 3 inputs channels and 32 output channels. Layer 2 has 32 and 64. Layer 3 has 64 and 64. Finally, layer 4 has 64 inputs channels and 128 output channels .
+The resulting tensor (feature maps) are of dimensions [batch size, $H*W =7*7$, $dim$=128]. 
+
+
+
+
 \colorbx{Question Encoder}
+
+
+\begin{description}
+	\item[Inputs:] 
+	\begin{enumerate}
+		\item question string $question$
+		\item question lengths $question_l$
+		
+	\end{enumerate}
+	
+	
+	\item[Output:] 
+	\begin{enumerate}
+		\item contextual word embeddingg $cw$
+		\item question encoding $q$
+		
+	\end{enumerate}
+	
+\end{description}
+
+
+
+The strings questions are first embedded ($torch.NN.Embeddings$) and then passed through a $d$-dimensional biLSTM ($d$=128).
+The final hidden state of the biLSTM becomes the question encoding representation $q$. Whereas the biLSTM outputs are projected via a linear layer to become the final words encodings named contextual words $cw$. 
 
 \colorbx{Output Unit}
 
+\begin{description}
+	\item[Inputs:] 
+	\begin{enumerate}
+		\item question encoding $q$
+		\item summary object $so_t$
 
+	\end{enumerate}
+	
+	
+	\item[Output:] 
+	prediction 
+\end{description}
+
+
+
+The output unit predicts the final answer to the question. It is a 2-linear-layer-ELU classifier that produces a distribution over the possible candidates. It is based on two inputs, the final summary object $so_t$ and the question encoding $q$ that are concatenated together. 
+ 
 
 \section{Training and Implementation Details}
 
@@ -423,37 +492,38 @@ The training and implementation details are in appendix.
 			Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard  \\ 
 			\midrule
 			
-			Overall accuracy & 98.0 & 91.6 & 96.5  & running &           & 97.6  & 65.9 & running& 80.1 \\ 
+			Overall accuracy & 98.0 & 91.6 & 96.5  & running &           & 97.6  & 65.9 & 78.1& 80.1 \\ 
 			
 			\midrule 
 			
 			
-			AndCompareColor	&	93.5		&	82.7	&	89.2	&&		&81.9	&57.1&&	51.4
+			AndCompareColor	&	93.5		&	82.7	&	89.2	&&		&81.9	&57.1& 60.7&	51.4
 			\\ 
-			AndCompareShape	&	93.2 		&	83.7	&	89.7	&&	&	80.0	&53.1	&&50.7\\ 
-			AndSimpleCompareColor	&	99.2	&		85.3	&	97.6	&	&	&99.7&	53.4&&	78.2\\ 
-			AndSimpleCompareShape	&	99.2&			85.8	&	97.6	&&	&	100.0	&56.7&&	77.9\\ 
-			CompareColor	&	98.1		&	89.3	&	95.9	&&		&99.2&	56.1&&	50.1\\ 
-			CompareShape	&	98.0	&		89.7	&	95.9	&&	&99.4	&66.8	&&50.5
+			AndCompareShape	&	93.2 		&	83.7	&	89.7	&&	&	80.0	&53.1	&50.3&50.7\\ 
+			AndSimpleCompareColor	&	99.2	&		85.3	&	97.6	&	&	&99.7&	53.4&77.1&	78.2\\ 
+			AndSimpleCompareShape	&	99.2&			85.8	&	97.6	&&	&	100.0	&56.7&79.3&	77.9\\ 
+			CompareColor	&	98.1		&	89.3	&	95.9	&&		&99.2&	56.1&67.9&	50.1\\ 
+			CompareShape	&	98.0	&		89.7	&	95.9	&&	&99.4	&66.8	&65.4&50.5
 			\\ 
-			Exist	&	100.0	&		99.7	&	99.8		&&	&	100.0&	63.5&&	99.3\\ 
-			ExistColor	&	100.0		&	99.6	&	99.9	&&	&	99.0&	70.9&&	89.8\\ 
-			ExistColorOf	&	99.9	&		95.5	&	99.7		& & &	99.7&	51.5&&	73.1\\ 
-			ExistColorSpace	&94.1		&	88.8	&	91.0	&& &	98.9	&72.8	&&89.2\\ 
-			ExistLastColorSameShape	&	99.5		&	99.4	&99.4	&&		&100.0	&65.0&&	50.4
+			Exist	&	100.0	&		99.7	&	99.8		&&	&	100.0&	63.5&96.1&	99.3\\ 
+			ExistColor	&	100.0		&	99.6	&	99.9	&&	&	99.0&	70.9&99&	89.8\\ 
+			ExistColorOf	&	99.9	&		95.5	&	99.7		& & &	99.7&	51.5&76.1&	73.1\\ 
+			ExistColorSpace	&94.1		&	88.8	&	91.0	&& &	98.9	&72.8	&77.3&89.2\\ 
+			ExistLastColorSameShape	&	99.5		&	99.4	&99.4	&&		&100.0	&65.0&62.5&	50.4
 			\\ 
-			ExistLastObjectSameObject	&	97.3	&		97.5	&	97.7	&&	&	98.0&	77.5	&&60.2\\ 
-			ExistLastShapeSameColor	&	98.2		&	98.5&	98.8	&&	&	100.0&	87.8&&	50.3\\ 
-			ExistShape	&	100.0	&	99.5	&	100.0	&&&	100.0&	77.1	&&92.5\\ 
-			ExistShapeOf	&	99.4		&	95.9	&	99.2	&&&100.0	&52.7&&89.8\\ 
-			ExistSpace	&	95.3	&	89.7	&	93.2	&&		&	98.9	&71.1	&&92.8\\ 
-			GetColor	&	100.0		&	95.8&	99.9	&& &	100.0&	71.4&&	97.9\\ 
-			GetColorSpace	&	98.0		&	90.0	&	95.0&	& &	98.2	&71.8&&	92.3\\ 
-			GetShape	&	100.0		&	97.3&	99.9&	&	&	100.0  &83.5&&	97.1
+			ExistLastObjectSameObject	&	97.3	&		97.5	&	97.7	&&	&	98.0&	77.5	&61.7&60.2\\ 
+			ExistLastShapeSameColor	&	98.2		&	98.5&	98.8	&&	&	100.0&	87.8&60.4&	50.3\\ 
+			ExistShape	&	100.0	&	99.5	&	100.0	&&&	100.0&	77.1	&98.2&92.5\\ 
+			ExistShapeOf	&	99.4		&	95.9	&	99.2	&&&100.0	&52.7&74.7&72.70\\ 
+			ExistShapeSpace &	93.4		&	87.5	&	91.1	&&&97.7 &70	&89.8&89.80& \\
+			ExistSpace	&	95.3	&	89.7	&	93.2	&&		&	98.9	&71.1	&88.1&92.8\\ 
+			GetColor	&	100.0		&	95.8&	99.9	&& &	100.0&	71.4&83.1&	97.9\\ 
+			GetColorSpace	&	98.0		&	90.0	&	95.0&	& &	98.2	&71.8&73.&	92.3\\ 
+			GetShape	&	100.0		&	97.3&	99.9&	&	&	100.0  &83.5&89.2&	97.1
 			\\ 
-			GetShapeSpace	&	97.5	&	89.4	&	93.9	&&&	98.1  &78.7	&&	90.3\\ 
-			SimpleCompareShape	&	99.9		&	91.4	&	99.7	&	&&	100.0 & 67.7&&	99.3\\ 
-			SimpleCompareColor	&	100.0 		&	91.6  &	99.80&	&	&	100.0&	64.2&&	99.3	  \\ 
+			GetShapeSpace	&	97.5	&	89.4	&	93.9	&&&	98.1  &78.7	&77.3&	90.3\\ 
+			SimpleCompareShape	&	99.9		&	91.4	&	99.7	&	&&	100.0 & 67.7&96.7&	99.3\\ 
+			SimpleCompareColor	&	100.0 		&	91.6  &	99.80&	&	&	100.0&	64.2&90.4&	99.3	  \\ 
 			
 			
 			
