Updated model section. Cosmetic changes to other sections.

--- a/2019_neurips_vigil/appendix_model.tex
+++ b/2019_neurips_vigil/appendix_model.tex
@@ -357,7 +357,7 @@ The image encoder, question encoder and output unit are described in the appendi
 
 \begin{figure}
 	\includegraphics[width=\textwidth]{img/model2}
-	\label{fig:model}
+	\label{fig:model2}
 \end{figure}	
 
 \begin{figure}
