--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -1,18 +1,3 @@
-@Article{•,
-author = {•},
-title = {•},
-journal = {•},
-year = {•},
-OPTkey = {•},
-OPTvolume = {•},
-OPTnumber = {•},
-OPTpages = {•},
-OPTmonth = {•},
-OPTnote = {•},
-OPTannote = {•}
-}
-% Encoding: UTF-8
-
 @InProceedings{haurilet2019s,
   author    = {Haurilet, Monica and Roitberg, Alina and Stiefelhagen, Rainer},
   title     = {It's Not About the Journey; It's About the Destination: Following Soft Paths Under Question-Guidance for Visual Reasoning},
@@ -150,6 +135,14 @@ OPTannote = {•}
   pages        = {729--745},
   organization = {Springer},
 }
+
+@misc{yang2018implement,
+  title = {COG implementation},
+  author       = {Ganichev, Igor},
+  howpublished = {\url{https://github.com/google/cog}},
+  year         = {2018},  
+}
+
 
 @Article{weston2015towards,
   author  = {Weston, Jason and Bordes, Antoine and Chopra, Sumit and Rush, Alexander M and van Merri{\"e}nboer, Bart and Joulin, Armand and Mikolov, Tomas},
